# VulkanTest

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  README.md  conanfile.txt  vcpkg.json
cmake/: FindSlang.cmake  SlangUtils.cmake  VulkanModule.cmake
shaders/: triangle.slang
src/: Application.cpp  Application.cppm  Application.h  ApplicationQueueFamilies.cpp  ApplicationQueueFamilies.cppm  ApplicationQueueFamilies.h  ApplicationSwapChainDetails.cpp  ApplicationSwapChainDetails.cppm  ApplicationSwapChainDetails.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  QueueFamilyIndicies.h  SwapChainDetails.cpp  SwapChainDetails.h  Vertex.cpp  Vertex.h  main.cpp  sdl_vulkan.cpp  sdl_vulkan.hpp  utils.cpp  utils.cppm  utils.h
src/Events/: Event.h  Resize.h  VisibilityChange.h
src/Window/: SfmlWindow.cpp  SfmlWindow.h  Win32Window.cpp  Win32Window.h  Window.h
